--- a/planetary_diversity/localisation/german/planetarydiversity_domed_colonies_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_domed_colonies_l_german.yml
@@ -183,60 +183,60 @@
  requires_no_terraforming:1 "$TRIGGER_FAIL$Kann nicht auf Planeten bauen, auf denen Terraforming-Projekte laufen."
 
 #Jan 2025 Update - Decisions to make Outposts
- pd_domed_moonbase_site_2: "$pd_domed_moonbase_site_1$"
- pd_domed_moonbase_site_2_desc: "$pd_domed_moonbase_site_1_desc$"
- pd_domed_moonbase_site_3: "$pd_domed_moonbase_site_1$"
- pd_domed_moonbase_site_3_desc: "$pd_domed_moonbase_site_1_desc$"
- pd_domed_moonbase_site_4: "$pd_domed_moonbase_site_1$"
- pd_domed_moonbase_site_4_desc: "$pd_domed_moonbase_site_1_desc$"
- pd_domed_moonbase_site_5: "$pd_domed_moonbase_site_1$"
- pd_domed_moonbase_site_5_desc: "$pd_domed_moonbase_site_1_desc$"
- pd_domed_research_site_2: "$pd_domed_research_site_1$"
- pd_domed_research_site_2_desc: "$pd_domed_research_site_1_desc$"
- pd_domed_research_site_3: "$pd_domed_research_site_1$"
- pd_domed_research_site_3_desc: "$pd_domed_research_site_1_desc$"
- pd_domed_mining_site_2: "$pd_domed_mining_site_1$"
- pd_domed_mining_site_2_desc: "$pd_domed_mining_site_1_desc$"
- pd_domed_mining_site_3: "$pd_domed_mining_site_1$"
- pd_domed_mining_site_3_desc: "$pd_domed_mining_site_1_desc$"
- pd_domed_food_site_2: "$pd_domed_food_site_1$"
- pd_domed_food_site_2_desc: "$pd_domed_food_site_1_desc$"
- pd_domed_food_site_3: "$pd_domed_food_site_1$"
- pd_domed_food_site_3_desc: "$pd_domed_food_site_1_desc$"
- pd_domed_energy_site_2: "$pd_domed_energy_site_1$"
- pd_domed_energy_site_2_desc: "$pd_domed_energy_site_1_desc$"
- pd_domed_energy_site_3: "$pd_domed_energy_site_1$"
- pd_domed_energy_site_3_desc: "$pd_domed_energy_site_1_desc$"
- decision_build_pd_moon_base: "Build Moon Outpost"
- decision_build_pd_moon_base_desc: "We will construct Moon Outposts on the moon or moons of this world."
- decision_build_pd_moon_base_moon_colony: "$decision_build_pd_moon_base$"
- decision_build_pd_moon_base_moon_colony_desc: "We will construct Moon Outposts on the other moon or moons of the planet this world orbits."
- decision_build_pd_mining_base: "Build Mining Outpost in System"
- decision_build_pd_mining_base_desc: "We will construct a Planetary Mining Outpost on an uninhabitable world in this solar system."
- decision_build_pd_mining_base_2: "$decision_build_pd_mining_base$"
- decision_build_pd_mining_base_2_desc: "$decision_build_pd_mining_base_desc$"
- decision_build_pd_mining_base_3: "$decision_build_pd_mining_base$"
- decision_build_pd_mining_base_3_desc: "$decision_build_pd_mining_base_desc$"
- decision_build_pd_food_base: "Build Hydroponics Outpost in System"
- decision_build_pd_food_base_desc: "We will construct a Planetary Hydroponics Outpost on an uninhabitable world in this solar system."
- decision_build_pd_food_base_2: "$decision_build_pd_food_base$"
- decision_build_pd_food_base_2_desc: "$decision_build_pd_food_base_desc$"
- decision_build_pd_food_base_3: "$decision_build_pd_food_base$"
- decision_build_pd_food_base_3_desc: "$decision_build_pd_food_base_desc$"
- decision_build_pd_energy_base: "Build Generator Oupost in System"
- decision_build_pd_energy_base_desc: "We will construct a Planetary Generator Outpost on an uninhabitable world in this solar system."
- decision_build_pd_energy_base_2: "$decision_build_pd_energy_base$"
- decision_build_pd_energy_base_2_desc: "$decision_build_pd_energy_base_desc$"
- decision_build_pd_energy_base_3: "$decision_build_pd_energy_base$"
- decision_build_pd_energy_base_3_desc: "$decision_build_pd_energy_base_desc$"
- decision_build_pd_research_base: "Build Research Outpost in System"
- decision_build_pd_research_base_desc: "We will construct a Planetary Research Outpost on an uninhabitable world in this solar system."
- decision_build_pd_research_base_2: "$decision_build_pd_research_base$"
- decision_build_pd_research_base_2_desc: "$decision_build_pd_research_base_desc$"
- decision_build_pd_research_base_3: "$decision_build_pd_research_base$"
- decision_build_pd_research_base_3_desc: "$decision_build_pd_research_base_desc$"
- MAKE_MOON_BASES: "§YMoon Outpost§! is constructed."
- MAKE_MINIG_BASES: "§YMining Outpost§! is constructed."
- MAKE_FOOD_BASES: "§YHydroponics Outpost§! is constructed."
- MAKE_ENERGY_BASES: "§YGenerator Outpost§! is constructed."
- MAKE_RESEARCH_BASES: "§YResearch Outpost§! is constructed."
+pd_domed_moonbase_site_2: "$pd_domed_moonbase_site_1$"
+pd_domed_moonbase_site_2_desc: "$pd_domed_moonbase_site_1_desc$"
+pd_domed_moonbase_site_3: "$pd_domed_moonbase_site_1$"
+pd_domed_moonbase_site_3_desc: "$pd_domed_moonbase_site_1_desc$"
+pd_domed_moonbase_site_4: "$pd_domed_moonbase_site_1$"
+pd_domed_moonbase_site_4_desc: "$pd_domed_moonbase_site_1_desc$"
+pd_domed_moonbase_site_5: "$pd_domed_moonbase_site_1$"
+pd_domed_moonbase_site_5_desc: "$pd_domed_moonbase_site_1_desc$"
+pd_domed_research_site_2: "$pd_domed_research_site_1$"
+pd_domed_research_site_2_desc: "$pd_domed_research_site_1_desc$"
+pd_domed_research_site_3: "$pd_domed_research_site_1$"
+pd_domed_research_site_3_desc: "$pd_domed_research_site_1_desc$"
+pd_domed_mining_site_2: "$pd_domed_mining_site_1$"
+pd_domed_mining_site_2_desc: "$pd_domed_mining_site_1_desc$"
+pd_domed_mining_site_3: "$pd_domed_mining_site_1$"
+pd_domed_mining_site_3_desc: "$pd_domed_mining_site_1_desc$"
+pd_domed_food_site_2: "$pd_domed_food_site_1$"
+pd_domed_food_site_2_desc: "$pd_domed_food_site_1_desc$"
+pd_domed_food_site_3: "$pd_domed_food_site_1$"
+pd_domed_food_site_3_desc: "$pd_domed_food_site_1_desc$"
+pd_domed_energy_site_2: "$pd_domed_energy_site_1$"
+pd_domed_energy_site_2_desc: "$pd_domed_energy_site_1_desc$"
+pd_domed_energy_site_3: "$pd_domed_energy_site_1$"
+pd_domed_energy_site_3_desc: "$pd_domed_energy_site_1_desc$"
+decision_build_pd_moon_base: "Mond-Außenposten errichten"
+decision_build_pd_moon_base_desc: "Wir werden Mond-Außenposten auf dem Mond oder den Monden dieser Welt errichten."
+decision_build_pd_moon_base_moon_colony: "$decision_build_pd_moon_base$"
+decision_build_pd_moon_base_moon_colony_desc: "Wir werden Mond-Außenposten auf dem anderen Mond oder den Monden des Planeten errichten, den diese Welt umkreist."
+decision_build_pd_mining_base: "Bergbau-Außenposten im System errichten"
+decision_build_pd_mining_base_desc: "Wir werden einen planetaren Bergbau-Außenposten auf einer unbewohnbaren Welt in diesem Sonnensystem errichten."
+decision_build_pd_mining_base_2: "$decision_build_pd_mining_base$"
+decision_build_pd_mining_base_2_desc: "$decision_build_pd_mining_base_desc$"
+decision_build_pd_mining_base_3: "$decision_build_pd_mining_base$"
+decision_build_pd_mining_base_3_desc: "$decision_build_pd_mining_base_desc$"
+decision_build_pd_food_base: "Hydrokultur-Außenposten im System errichten"
+decision_build_pd_food_base_desc: "Wir werden einen planetaren Hydrokultur-Außenposten auf einer unbewohnbaren Welt in diesem Sonnensystem errichten."
+decision_build_pd_food_base_2: "$decision_build_pd_food_base$"
+decision_build_pd_food_base_2_desc: "$decision_build_pd_food_base_desc$"
+decision_build_pd_food_base_3: "$decision_build_pd_food_base$"
+decision_build_pd_food_base_3_desc: "$decision_build_pd_food_base_desc$"
+decision_build_pd_energy_base: "Generator-Außenposten im System errichten"
+decision_build_pd_energy_base_desc: "Wir werden einen planetaren Generator-Außenposten auf einer unbewohnbaren Welt in diesem Sonnensystem errichten."
+decision_build_pd_energy_base_2: "$decision_build_pd_energy_base$"
+decision_build_pd_energy_base_2_desc: "$decision_build_pd_energy_base_desc$"
+decision_build_pd_energy_base_3: "$decision_build_pd_energy_base$"
+decision_build_pd_energy_base_3_desc: "$decision_build_pd_energy_base_desc$"
+decision_build_pd_research_base: "Forschungs-Außenposten im System errichten"
+decision_build_pd_research_base_desc: "Wir werden einen planetaren Forschungs-Außenposten auf einer unbewohnbaren Welt in diesem Sonnensystem errichten."
+decision_build_pd_research_base_2: "$decision_build_pd_research_base$"
+decision_build_pd_research_base_2_desc: "$decision_build_pd_research_base_desc$"
+decision_build_pd_research_base_3: "$decision_build_pd_research_base$"
+decision_build_pd_research_base_3_desc: "$decision_build_pd_research_base_desc$"
+MAKE_MOON_BASES: "§YMond-Außenposten§! wurde errichtet."
+MAKE_MINIG_BASES: "§YBergbau-Außenposten§! wurde errichtet."
+MAKE_FOOD_BASES: "§YHydrokultur-Außenposten§! wurde errichtet."
+MAKE_ENERGY_BASES: "§YGenerator-Außenposten§! wurde errichtet."
+MAKE_RESEARCH_BASES: "§YForschungs-Außenposten§! wurde errichtet."
