--- a/planetary_diversity_arcologies/localisation/german/planetarydiversity_more_arcologies_l_german.yml
+++ b/planetary_diversity_arcologies/localisation/german/planetarydiversity_more_arcologies_l_german.yml
@@ -34,7 +34,7 @@ job_pd_naval_admin_desc: "Diese Spezialisten verfügen über eine umfassende Aus
 mod_job_pd_naval_admin_add: "$job_pd_naval_admin$ Stelle"
 mod_job_pd_naval_admin_per_pop: "§G+1§! $job_pd_naval_admin$ Job pro $VALUE$ Pops"
 mod_job_pd_naval_admin_per_pop_short: "\n§G+1§! £mod_job_pd_naval_admin_add£ pro $VALUE$ £Pop£"
-job_pd_naval_admin_effect_desc: "£job_pd_naval_admin£ $job_pd_naval_admin_plural$ verbessert die Effizienz der Marine, indem £Konsumgüter£ §Y$Konsumgüter$§! in £Gesellschaft£ §YForschungspunkte§! und £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§! umgewandelt werden."
+job_pd_naval_admin_effect_desc: "£job_pd_naval_admin£ $job_pd_naval_admin_plural$ verbessert die Effizienz der Marine, indem £consumer_goods£ §Y$Konsumgüter$§! in £Gesellschaft£ §YForschungspunkte§! und £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§! umgewandelt werden."
 #Gestalt Logistik
 job_pd_naval_admin_gestalt: "Logistikdrohne"
 job_pd_naval_admin_gestalt_plural: "Logistikdrohnen"
@@ -49,7 +49,7 @@ job_pd_capital_bio_politician_desc: "Bestimmte Bio-Trophäen zeigen eine höhere
 mod_job_pd_capital_bio_politician_add: "$job_pd_capital_bio_politician$ Jobs"
 mod_job_pd_capital_bio_politician_per_pop: "§G+1§! $job_pd_capital_bio_politician$ Job pro $VALUE$ Pops"
 mod_job_pd_capital_bio_politician_per_pop_short: "\n§G+1§! £mod_job_pd_capital_bio_politician_add£ pro $VALUE$ £Pop£"
-job_pd_capital_bio_effect_desc: "$job_pd_capital_bio_politician$ $job_pd_capital_bio_politician_plural$ verwandelt £Konsumgüter£ §Y$Konsumgüter$§! in £Einheit£ §Y$Einheit$§! und erhöht §Y$mod_planet_jobs_complex_and_simple_drone_produces_mult$§!"
+job_pd_capital_bio_effect_desc: "$job_pd_capital_bio_politician$ $job_pd_capital_bio_politician_plural$ verwandelt £consumer_goods£ §Y$Konsumgüter$§! in £Einheit£ §Y$Einheit$§! und erhöht §Y$mod_planet_jobs_complex_and_simple_drone_produces_mult$§!"
 #Rogue Rangers
 job_pd_robo_ranger: "Biodiversitätsdrohne"
 job_pd_robo_ranger_plural: "Biodiversitätsdrohnen"
@@ -71,8 +71,8 @@ building_navel_command_desc: "Dieser Militärkomplex ist eine kolossale Kommando
 #Garten
 decision_pd_garden_arcology_project: "Arcology-Projekt – Garten"
 decision_pd_garden_arcology_project_desc: "Indem wir Grünflächen in das Gefüge unserer Arkologien einbinden, können wir eine ausgedehnte Ökumenopolis entwickeln, in der Natur und Urbanität harmonisch koexistieren."
-decision_pd_garden_arcology_project_effects: "Verwandelt den Planeten in eine §Y$pc_city$§ !, wodurch £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YRessourcenproduktion§! und §YBevölkerungswachstum§! erhöht werden und spezielle £District£ §YArcology-Distrikte§! freigeschaltet werden. Auf Kosten der natürlichen Ressourcen des Planeten werden diese §Runzugänglich§!, wodurch der weitere Bau von £District£ §YGenerator§!, §YBergbau§! und §YAgriculture-Distrikten§! verhindert wird."
-decision_pd_garden_arcology_project_effects_short: "Erhöht £housing£ §Y$PLANET_HOUSING_TITLE$§ !, §YRessourcenproduktion§! und §YBevölkerungswachstum§!\nAktiviert £Bezirk£ §YArkologie-Bezirke§!\nDeaktiviert den Bau von £Bezirk£ §YGenerator§!, §YBergbau§! und §YAgriculture-Bezirken§!"
+decision_pd_garden_arcology_project_effects: "Verwandelt den Planeten in eine §Y$pc_city$§ !, wodurch £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YRessourcenproduktion§! und §YBevölkerungswachstum§! erhöht werden und spezielle £district£ §YArcology-Distrikte§! freigeschaltet werden. Auf Kosten der natürlichen Ressourcen des Planeten werden diese §Runzugänglich§!, wodurch der weitere Bau von £district£ §YGenerator§!, §YBergbau§! und §YAgriculture-Distrikten§! verhindert wird."
+decision_pd_garden_arcology_project_effects_short: "Erhöht £housing£ §Y$PLANET_HOUSING_TITLE$§ !, §YRessourcenproduktion§! und §YBevölkerungswachstum§!\nAktiviert £district£ §YArkologie-Bezirke§!\nDeaktiviert den Bau von £district£ §YGenerator§!, §YBergbau§! und §YAgriculture-Bezirken§!"
 decision_pd_garden_arcology_project_relic: "Ökumenopolis wiederherstellen – Garten"
 decision_pd_garden_arcology_project_relic_desc: "Dieser Planet war einst eine lebendige Ökumenopolis. Es wäre eine monumentale Aufgabe, aber der Planet könnte in eine Garten-Arcologie umgebaut werden."
 decision_pd_garden_arcology_project_relic_effects: "Entscheidung_pd_garden_arcology_project_effects$"
@@ -80,8 +80,8 @@ decision_pd_garden_arcology_project_relic_effects_short: "Entscheidung_pd_garden
 #Festung
 decision_pd_fortress_arcology_project: "Arcology-Projekt – Festung"
 decision_pd_fortress_arcology_project_desc: "Wir können eine beeindruckende Bastion errichten, indem wir befestigte Strukturen und moderne Abschirmungen um unsere Arkologien herum integrieren."
-decision_pd_fortress_arcology_project_effects: "Verwandelt den Planeten in eine §Y$pc_city$§ !, wodurch £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YRessourcenproduktion§! und §YBevölkerungswachstum§! erhöht werden und spezielle £District£ §YArcology-Distrikte§! freigeschaltet werden. Auf Kosten der natürlichen Ressourcen des Planeten werden diese §Runzugänglich§!, wodurch der weitere Bau von £District£ §YGenerator§!, §YBergbau§! und §YAgriculture-Distrikten§! verhindert wird."
-decision_pd_fortress_arcology_project_effects_short: "Erhöht £housing£ §Y$PLANET_HOUSING_TITLE$§ !, §YRessourcenproduktion§! und §YBevölkerungswachstum§!\nAktiviert £Bezirk£ §YArkologie-Bezirke§!\nDeaktiviert den Bau von £Bezirk£ §YGenerator§!, §YBergbau§! und §YAgriculture-Bezirken§!"
+decision_pd_fortress_arcology_project_effects: "Verwandelt den Planeten in eine §Y$pc_city$§ !, wodurch £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YRessourcenproduktion§! und §YBevölkerungswachstum§! erhöht werden und spezielle £district£ §YArcology-Distrikte§! freigeschaltet werden. Auf Kosten der natürlichen Ressourcen des Planeten werden diese §Runzugänglich§!, wodurch der weitere Bau von £district£ §YGenerator§!, §YBergbau§! und §YAgriculture-Distrikten§! verhindert wird."
+decision_pd_fortress_arcology_project_effects_short: "Erhöht £housing£ §Y$PLANET_HOUSING_TITLE$§ !, §YRessourcenproduktion§! und §YBevölkerungswachstum§!\nAktiviert £district£ §YArkologie-Bezirke§!\nDeaktiviert den Bau von £district£ §YGenerator§!, §YBergbau§! und §YAgriculture-Bezirken§!"
 decision_pd_fortress_arcology_project_relic: "Ökumenopolis wiederherstellen – Festung"
 decision_pd_fortress_arcology_project_relic_desc: "Dieser Planet war einst eine lebendige Ökumenopolis. Es wäre eine monumentale Aufgabe, aber der Planet könnte in eine Festung der Arkologie umgebaut werden."
 Entscheidung_pd_fortress_arcology_project_relic_effects: "$Entscheidung_pd_fortress_arcology_project_effects$"
@@ -89,8 +89,8 @@ Entscheidung_pd_fortress_arcology_project_relic_effects_short: "$Entscheidung_pd
 #Kommerziell
 decision_pd_commerical_arcology_project: "Arcology-Projekt – kommerziell"
 decision_pd_commerical_arcology_project_desc: "Wir können einen florierenden Handelsknotenpunkt schaffen, indem wir Marktplätze und Handelsnetzwerke in das Gewebe dieser Arkologie einweben."
-decision_pd_commerical_arcology_project_effects: "Verwandelt den Planeten in eine §Y$pc_city$§ !, wodurch £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YRessourcenproduktion§! und §YBevölkerungswachstum§! erhöht werden und spezielle £District£ §YArcology-Distrikte§! freigeschaltet werden . Auf Kosten der §RUnzugänglichkeit§! der natürlichen Ressourcen des Planeten werden dadurch alle weiteren Bauarbeiten an £District£ §YGenerator§!, §YBergbau§! und §YAgriculture-Distrikten§! verhindert werden."
-decision_pd_commerical_arcology_project_effects_short: "Erhöht £housing£ §Y$PLANET_HOUSING_TITLE$§ !, §YRessourcenproduktion§! und §YBevölkerungswachstum§!\nAktiviert £Bezirk£ §YArkologie-Bezirke§!\nDeaktiviert den Bau von £Bezirk£ §YGenerator§!, §YBergbau§! und §YAgriculture-Bezirken§!"
+decision_pd_commerical_arcology_project_effects: "Verwandelt den Planeten in eine §Y$pc_city$§ !, wodurch £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YRessourcenproduktion§! und §YBevölkerungswachstum§! erhöht werden und spezielle £district£ §YArcology-Distrikte§! freigeschaltet werden . Auf Kosten der §RUnzugänglichkeit§! der natürlichen Ressourcen des Planeten werden dadurch alle weiteren Bauarbeiten an £district£ §YGenerator§!, §YBergbau§! und §YAgriculture-Distrikten§! verhindert werden."
+decision_pd_commerical_arcology_project_effects_short: "Erhöht £housing£ §Y$PLANET_HOUSING_TITLE$§ !, §YRessourcenproduktion§! und §YBevölkerungswachstum§!\nAktiviert £district£ §YArkologie-Bezirke§!\nDeaktiviert den Bau von £district£ §YGenerator§!, §YBergbau§! und §YAgriculture-Bezirken§!"
 decision_pd_commerical_arcology_project_relic: "Ecumenopolis wiederherstellen – Kommerziell"
 decision_pd_commerical_arcology_project_relic_desc: "Dieser Planet war einst eine lebendige Ökumenopolis. Es wäre eine monumentale Aufgabe, aber der Planet könnte in eine kommerzielle Arkologie umgebaut werden."
 Entscheidung_pd_commerical_arcology_project_relic_effects: "$Entscheidung_pd_commerical_arcology_project_effects$"
@@ -160,13 +160,13 @@ pd_machine_military_desc: "Diese Planeteneinheit ist ein integraler Bestandteil 
 #Entscheidungen
 decision_pd_hive_overmind_project: "Hive-Projekt – Overmind"
 decision_pd_hive_overmind_project_desc: "Diese Schwarmwelt wird in eine Bastion fortgeschrittener Denkprozesse für das Schwarmbewusstsein umgestaltet."
-decision_pd_hive_overmind_project_effects: "Verwandelt den Planeten in einen §Y$pc_pd_hive$§ !, wodurch £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YRessourcenproduktion§! und §YBevölkerungswachstum§! erhöht werden und spezielle £District£ §YArkologie-Distrikte§! freigeschaltet werden . Auf Kosten der §RUnzugänglichkeit§! der natürlichen Ressourcen des Planeten werden dadurch alle weiteren Bauarbeiten an £District£ §YGenerator§!, §YBergbau§! und §YAgriculture-Distrikten§! verhindert werden."
-decision_pd_hive_overmind_project_effects_short: "Erhöht £housing£ §Y$PLANET_HOUSING_TITLE$§ !, §YRessourcenproduktion§! und §YBevölkerungswachstum§!\nAktiviert £Bezirk£ §YArkologie-Bezirke§!\nDeaktiviert den Bau von £Bezirk£ §YGenerator§!, §YBergbau§! und §YAgriculture-Bezirken§!"
+decision_pd_hive_overmind_project_effects: "Verwandelt den Planeten in einen §Y$pc_pd_hive$§ !, wodurch £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YRessourcenproduktion§! und §YBevölkerungswachstum§! erhöht werden und spezielle £district£ §YArkologie-Distrikte§! freigeschaltet werden . Auf Kosten der §RUnzugänglichkeit§! der natürlichen Ressourcen des Planeten werden dadurch alle weiteren Bauarbeiten an £district£ §YGenerator§!, §YBergbau§! und §YAgriculture-Distrikten§! verhindert werden."
+decision_pd_hive_overmind_project_effects_short: "Erhöht £housing£ §Y$PLANET_HOUSING_TITLE$§ !, §YRessourcenproduktion§! und §YBevölkerungswachstum§!\nAktiviert £district£ §YArkologie-Bezirke§!\nDeaktiviert den Bau von £district£ §YGenerator§!, §YBergbau§! und §YAgriculture-Bezirken§!"
 
 decision_pd_machine_nexus_project: "Maschinenprojekt - Nexus"
 decision_pd_machine_nexus_project_desc: "Diese Maschinenwelt wird zu einer Bastion fortgeschrittener Subroutinen ausgebaut."
-decision_pd_machine_nexus_project_effects: "Verwandelt den Planeten in einen §Y$pc_pd_hive$§ !, wodurch £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YRessourcenproduktion§! und §YBevölkerungswachstum§! erhöht werden und spezielle £District£ §YArkologie-Distrikte§! freigeschaltet werden. Auf Kosten der natürlichen Ressourcen des Planeten werden diese §Runzugänglich§!, wodurch der weitere Bau von £District£ §YGenerator§!, §YBergbau§! und §YAgriculture-Distrikten§! verhindert wird."
-decision_pd_machine_nexus_project_effects_short: "Erhöht £housing£ §Y$PLANET_HOUSING_TITLE$§ !, §YRessourcenproduktion§! und §YBevölkerungswachstum§!\nAktiviert £Bezirk£ §YArkologie-Bezirke§!\nDeaktiviert den Bau von £Bezirk£ §YGenerator§!, §YBergbau§! und §YAgriculture-Bezirken§!"
+decision_pd_machine_nexus_project_effects: "Verwandelt den Planeten in einen §Y$pc_pd_hive$§ !, wodurch £housing£ §Y$PLANET_HOUSING_TITLE$§!, §YRessourcenproduktion§! und §YBevölkerungswachstum§! erhöht werden und spezielle £district£ §YArkologie-Distrikte§! freigeschaltet werden. Auf Kosten der natürlichen Ressourcen des Planeten werden diese §Runzugänglich§!, wodurch der weitere Bau von £district£ §YGenerator§!, §YBergbau§! und §YAgriculture-Distrikten§! verhindert wird."
+decision_pd_machine_nexus_project_effects_short: "Erhöht £housing£ §Y$PLANET_HOUSING_TITLE$§ !, §YRessourcenproduktion§! und §YBevölkerungswachstum§!\nAktiviert £district£ §YArkologie-Bezirke§!\nDeaktiviert den Bau von £district£ §YGenerator§!, §YBergbau§! und §YAgriculture-Bezirken§!"
 
 ###Tooltips
 decision_pd_garden_arcology_project_effects: "Verwandelt den Planeten in eine §Y$pc_city$§!, erhöht die §YRessourcenproduktion§! und das §YBevölkerungswachstum§!.\nAktiviert £district£ Arkologie-Bezirke:$TABBED_NEW_LINE$- §Y$district_arcology_civilian_industry$§!$TABBED_NEW_LINE$- §Y$district_pd_arcology_research$§!$TABBED_NEW_LINE$- §Y$district_arcology_leisure$§!$TABBED_NEW_LINE$- §Y$district_arcology_administrative$§!\nDeaktiviert £district£ Bezirke:$TABBED_NEW_LINE$- §Y$district_generator$§! $TABBED_NEW_LINE$- §Y$district_mining$§!$TABBED_NEW_LINE$- §Y$district_farming$§!"
