--- a/planetary_diversity_arcologies/localisation/german/planetarydiversity_more_arcologies_capital_l_german.yml
+++ b/planetary_diversity_arcologies/localisation/german/planetarydiversity_more_arcologies_capital_l_german.yml
@@ -22,11 +22,11 @@ d_pd_headquarters_building: "Planetarisches Hauptquartier"
 d_pd_headquarters_building_desc: "Als monumentales Symbol der Dominanz überragt dieses Hauptquartier den Planeten. Es dient als Nervenzentrum für unsere Operationen, wo die Zukunft unseres Megakonzerns gestaltet wird."
 
 #Hive-Zusammenflussturm
-decision_pd_hive_confluence_spire: "Confluence Spire erstellen"
-decision_pd_hive_confluence_spire_desc: "Um die Überlegenheit und Reichweite unseres Kollektivs zu demonstrieren, werden wir einen mächtigen Konfluenzturm errichten. Diese Kommandostruktur wird unsere Operationen über die Sterne hinweg deutlich verstärken."
-decision_pd_hive_confluence_spire_effects: "Fügt dieser Hauptstadt das §Y$d_pd_confluence_spire_building$§! hinzu und tauscht potenzielle Bezirke aus, um unsere Verwaltungskapazitäten zu verbessern."
-d_pd_confluence_spire_building: "Confluence-Turm"
-d_pd_confluence_spire_building_desc: "Dieser Turm thront erhaben über der Oberfläche des Planeten, ein gewaltiges Leuchtfeuer der Kontrolle. Er ist der Mittelpunkt unseres kollektiven Willens, wo unser Weg zwischen den Sternen auf komplexe Weise verwoben ist."
+decision_pd_hive_confluence_spire: "Schwarmturm errichten"
+decision_pd_hive_confluence_spire_desc: "Als Zeichen der Macht und Ausdehnung unseres Kollektivs werden wir einen majestätischen Schwarmturm errichten. Diese zentrale Kontrollstruktur wird unsere interstellaren Operationen deutlich verstärken."
+decision_pd_hive_confluence_spire_effects: "Errichtet in dieser Hauptstadt das §Y$d_pd_confluence_spire_building$§! und wandelt vorhandene Bezirke um, um die administrative Kapazität zu steigern."
+d_pd_confluence_spire_building: "Schwarmturm"
+d_pd_confluence_spire_building_desc: "Ein gewaltiger Turm, der sich über den Planeten erhebt - ein lebendes Leuchtfeuer der Kontrolle. Er ist das schlagende Herz unseres kollektiven Willens und koordiniert unsere Ausbreitung zwischen den Sternen."
 
 #Maschinenzentralisierte Verarbeitung
 decision_pd_machine_centralized_processing: "Zentrale Verarbeitungseinheit erstellen"
