--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_superprojects_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_superprojects_l_polish.yml
@@ -1,77 +1,77 @@
 ﻿l_polish:
 #Planetary Superprojects
  #Notification
- MESSAGE_PD_AW_SUPERPROJECT_DESC: "The superproject on $PLANET|Y$ is complete."
- MESSAGE_PD_AW_SUPERPROJECT_MESSAGE_TYPE_TITLE: "Planetary Superproject Complete"
+ MESSAGE_PD_AW_SUPERPROJECT_DESC: "Superprojekt na planecie $PLANET|Y$ został ukończony."
+ MESSAGE_PD_AW_SUPERPROJECT_MESSAGE_TYPE_TITLE: "Superprojekt planetarny ukończony"
 
 #Core Tap
  #Planet Class
- pc_pd_core_tap: "Core Tap"
- pc_pd_core_tap_desc: "This rocky world now hosts a vast network of machines burrowing into its core to extract primal energy, a testament to engineering prowess that has destroyed the planet's original ecosystem."
- pc_pd_core_tap_adj: "energetic"
- mod_pc_pd_core_tap_habitability: "Core Tap Habitability"
- trait_pc_pd_core_tap_preference: "Core Tap Prefernce"
+ pc_pd_core_tap: "Megaodwiert rdzenia"
+ pc_pd_core_tap_desc: "Ta skalista planeta gości teraz rozległą sieć maszyn drążących w jej rdzeniu, aby wydobywać pierwotną energię — świadectwo inżynieryjnej potęgi, które zniszczyło oryginalny ekosystem planety."
+ pc_pd_core_tap_adj: "energetyczny"
+ mod_pc_pd_core_tap_habitability: "Możliwość zamieszkania Megaodwiertu rdzenia"
+ trait_pc_pd_core_tap_preference: "Preferencja Megaodwiertu rdzenia"
  trait_pc_pd_core_tap_preference_desc: "$trait_pc_arctic_preference_desc$"
 
  #Decision
- decision_pd_aw_core_tap: "Planetary Superproject: Core Tap"
- decision_pd_aw_core_tap_desc: "By creating a network of machines that burrow into the very core of this world, we will be able to generate an incredible amount of energy at the expense of the planet's ecosystem."
- decision_pd_megacoretap_requirements: "£trigger_no£ §RMust have §Y3§! or more §Y$district_generator_plural$§! and no other §YRural Districts§! built on the planet."
+ decision_pd_aw_core_tap: "Superprojekt planetarny: Megaodwiert rdzenia"
+ decision_pd_aw_core_tap_desc: "Tworząc sieć maszyn drążących w samym rdzeniu tego świata, będziemy w stanie generować niewiarygodne ilości energii kosztem ekosystemu planety."
+ decision_pd_megacoretap_requirements: "£trigger_no£ §RWymaga posiadania §Y3§! lub więcej §Y$district_generator_plural$§! oraz braku §Ydzielnic rolniczych§! na planecie."
 
  #Modifier
- pd_aw_core_tap: "Core Tap"
- pd_aw_core_tap_desc: "This world boasts a vast network of machines burrowing into its core to extract primal energy, but destorying the orignal ecosystem in the process."
- pd_aw_core_tap_tooltip: "£district£ §G$district_generator_plural$§! are uncapped"
+ pd_aw_core_tap: "Megaodwiert rdzenia"
+ pd_aw_core_tap_desc: "Ten świat posiada rozległą sieć maszyn drążących w jego rdzeniu w celu wydobywania pierwotnej energii, niszcząc jednak pierwotny ekosystem."
+ pd_aw_core_tap_tooltip: "£district£ §G$district_generator_plural$§! nie mają limitu"
 
  #Technology
- tech_pd_planetary_core_tap: "Planetary Superproject: Core Tap"
- tech_pd_planetary_core_tap_desc: "By creating a network of machines that burrow into the very core of a world, we will be able to generate an incredible amount of energy at the expense of the planet's ecosystem."
- tech_pd_planetary_core_tap_tooltip: "§HUnlocks Decision:§! $decision_pd_aw_core_tap$"
+ tech_pd_planetary_core_tap: "Superprojekt planetarny: Megaodwiert rdzenia"
+ tech_pd_planetary_core_tap_desc: "Tworząc sieć maszyn drążących w samym rdzeniu planety, będziemy w stanie generować niewiarygodne ilości energii kosztem ekosystemu."
+ tech_pd_planetary_core_tap_tooltip: "§HOdblokowuje decyzję:§! $decision_pd_aw_core_tap$"
 
 #Agriworld
  #Planet Class
- pc_pd_agriworld: "Agriworld"
- pc_pd_agriworld_desc: "This rocky planet brims with endless industrial farming heavily relying on potent fertilizers, complex weather control, and advanced irrigation systems. While it sustains an unceasing bounty, it has replaced the planet's natural ecosystem."
- pc_pd_agriworld_adj: "agarian"
- mod_pc_pd_agriworld_habitability: "Agriworld Habitability"
- trait_pc_pd_agriworld_preference: "Agriworld Prefernce"
+ pc_pd_agriworld: "Agroświat"
+ pc_pd_agriworld_desc: "Ta skalista planeta obfituje w niekończące się pola przemysłowego rolnictwa, silnie polegającego na mocnych nawozach, złożonej kontroli pogody i zaawansowanych systemach irygacyjnych. Choć dostarcza nieprzerwanego plonu, zastąpiła naturalny ekosystem planety."
+ pc_pd_agriworld_adj: "rolniczy"
+ mod_pc_pd_agriworld_habitability: "Możliwość zamieszkania Agroświata"
+ trait_pc_pd_agriworld_preference: "Preferencja Agroświata"
  trait_pc_pd_agriworld_preference_desc: "$trait_pc_arctic_preference_desc$"
 
  #Decision
- decision_pd_aw_agriworld: "Planetary Superproject: Agriworld"
- decision_pd_aw_agriworld_desc: "By transforming this planet into an Agriworld, we will create vast fields of industrial farming, replacing the natural ecosystem with a bountiful, artificial agricultural expanse."
- decision_pd_agriworld_requirements: "£trigger_no£ §RThere can be no other districts but§! §Y$district_farming_plural$§!"
+ decision_pd_aw_agriworld: "Superprojekt planetarny: Agroświat"
+ decision_pd_aw_agriworld_desc: "Przekształcając tę planetę w Agroświat, stworzymy rozległe pola przemysłowego rolnictwa, zastępując naturalny ekosystem sztucznym, lecz obfitym rolniczym krajobrazem."
+ decision_pd_agriworld_requirements: "£trigger_no£ §RNa planecie nie mogą istnieć inne dzielnice poza§! §Y$district_farming_plural$§!"
 
  #Modifier
- pd_aw_agriworld: "Agriworld"
- pd_aw_agriworld_desc: "This world boasts industrial farming that heavily relies on potent fertilizers, complex weather control, and advanced irrigation systems."
- pd_aw_agriworld_tooltip: "£district£ §G$district_farming_plural$§! are uncapped"
+ pd_aw_agriworld: "Agroświat"
+ pd_aw_agriworld_desc: "Ten świat obfituje w przemysłowe rolnictwo, silnie polegające na mocnych nawozach, złożonej kontroli pogody i zaawansowanych systemach irygacyjnych."
+ pd_aw_agriworld_tooltip: "£district£ §G$district_farming_plural$§! nie mają limitu"
 
  #Technology
- tech_pd_planetary_agriworld: "Planetary Superproject: Agriworld"
- tech_pd_planetary_agriworld_desc: "By transforming a planet into an Agriworld, we will create vast fields of industrial farming, replacing the natural ecosystem with a bountiful, artificial agricultural expanse."
- tech_pd_planetary_agriworld_tooltip: "§HUnlocks Decision:§! $decision_pd_aw_agriworld$"
+ tech_pd_planetary_agriworld: "Superprojekt planetarny: Agroświat"
+ tech_pd_planetary_agriworld_desc: "Przekształcając planetę w Agroświat, stworzymy rozległe pola przemysłowego rolnictwa, zastępując naturalny ekosystem sztucznym, lecz obfitym rolniczym krajobrazem."
+ tech_pd_planetary_agriworld_tooltip: "§HOdblokowuje decyzję:§! $decision_pd_aw_agriworld$"
 
 #Stripmine
  #Planet Class
- pc_pd_stripmine: "Stripmine"
- pc_pd_stripmine_desc: "This planet is now an expanse of deep strip-mining operations, its surface crisscrossed by a labyrinth of industrial excavators and drill rigs. The natural ecosystem has been ruined in the ceaseless quest for resources."
- pc_pd_stripmine_adj: "mining"
- mod_pc_pd_stripmine_habitability: "Stripmine Habitability"
- trait_pc_pd_stripmine_preference: "Stripmine Prefernce"
+ pc_pd_stripmine: "Megakopalnia odkrywkowa"
+ pc_pd_stripmine_desc: "Ta planeta to obecnie ogromne połacie głębokich odkrywkowych operacji górniczych, których powierzchnia poprzecinana jest labiryntem przemysłowych maszyn wydobywczych i wiertnic. Naturalny ekosystem został zniszczony w nieustannej pogoni za surowcami."
+ pc_pd_stripmine_adj: "górniczy"
+ mod_pc_pd_stripmine_habitability: "Możliwość zamieszkania Megakopalnii odkrywkowej"
+ trait_pc_pd_stripmine_preference: "Preferencja Megakopalnii odkrywkowej"
  trait_pc_pd_stripmine_preference_desc: "$trait_pc_arctic_preference_desc$"
 
  #Decision
- decision_pd_aw_stripmine: "Planetary Superproject: Stripmine"
- decision_pd_aw_stripmine_desc: "We could collect resources from every inch of this planet's surface by constructing advanced industrial excavators and drill rigs. The natural ecosystem will significantly suffer from the process."
- decision_pd_stripmine_requirements: "£trigger_no£ §RThere can be no other districts but§! §Y$district_mining_plural$§!"
+ decision_pd_aw_stripmine: "Superprojekt planetarny: Megakopalnia odkrywkowa"
+ decision_pd_aw_stripmine_desc: "Możemy pozyskiwać surowce z każdego zakątka powierzchni tej planety, budując zaawansowane przemysłowe maszyny wydobywcze i wiertnicze. Naturalny ekosystem znacznie na tym ucierpi."
+ decision_pd_stripmine_requirements: "£trigger_no£ §RNa planecie nie mogą istnieć inne dzielnice poza§! §Y$district_mining_plural$§!"
 
  #Modifier
- pd_aw_stripmine: "Stripmine"
- pd_aw_stripmine_desc: "This planet is an expanse of deep strip-mining operations, its surface crisscrossed by a labyrinth of industrial excavators and drill rigs."
- pd_aw_stripmine_tooltip: "£district£ §G$district_mining_plural$§! are uncapped"
+ pd_aw_stripmine: "Megakopalnia odkrywkowa"
+ pd_aw_stripmine_desc: "Ta planeta to ogromne połacie głębokiego wydobycia odkrywkowego, poprzecinane labiryntem przemysłowych maszyn wydobywczych i wiertnic."
+ pd_aw_stripmine_tooltip: "£district£ §G$district_mining_plural$§! nie mają limitu"
 
  #Technology
- tech_pd_planetary_stripmine: "Planetary Superproject: Stripmine"
- tech_pd_planetary_stripmine_desc: "We could collect resources from every inch of a planet's surface by constructing advanced industrial excavators and drill rigs. The natural ecosystem will significantly suffer from the process."
- tech_pd_planetary_stripmine_tooltip: "§HUnlocks Decision:§! $decision_pd_aw_stripmine$"
+ tech_pd_planetary_stripmine: "Superprojekt planetarny: Megakopalnia odkrywkowa"
+ tech_pd_planetary_stripmine_desc: "Możemy pozyskiwać surowce z każdego zakątka powierzchni planety, budując zaawansowane przemysłowe maszyny wydobywcze i wiertnicze. Naturalny ekosystem znacznie na tym ucierpi."
+ tech_pd_planetary_stripmine_tooltip: "§HOdblokowuje decyzję:§! $decision_pd_aw_stripmine$"
